# gitlab-weekly-updater

./: Cargo.toml  Dockerfile  package.json  script.js
.github/workflows/: deploy-image.yml
src/: gitlab.rs  main.rs
